fix: Adjust position of settings panel in CSS for better alignment

--- a/src/styles/cc-menu.css
+++ b/src/styles/cc-menu.css
@@ -1,6 +1,6 @@
 .cc-settings {
     width: 380px;
-    right: 150px;
+    right: 50px;
     top: 100%;
 }
 
